--- a/config
+++ b/config
@@ -32,3 +32,4 @@ custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🎯 全球直
 
 enable_rule_generator=true
 overwrite_original_rules=true
+exclude_remarks=(Only|Please|上海|联通|电信|移动)
