--- a/config
+++ b/config
@@ -10,7 +10,7 @@
 ;增强国外GFW：不支持
 
 surge_ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
-surge_ruleset=pornhub,https://raw.githubusercontent.com/stevenwsyi/clashrule/master/pornhub?token=AG37TPL65B5VNTKVF5NSH326PWHPA
+surge_ruleset=pornhub,https://raw.githubusercontent.com/stevenwsyi/clashrule/master/pornhub
 surge_ruleset=🛑 全球拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
 surge_ruleset=🛑 全球拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
 surge_ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
