--- a/config
+++ b/config
@@ -23,7 +23,7 @@ surge_ruleset=🎯 全球直连,[]GEOIP,CN
 surge_ruleset=🐟 漏网之鱼,[]FINAL
 
 custom_proxy_group=🚀 节点选择`select`[]🔯 故障转移`[]♻️ 自动选择`[]🎯 全球直连`.*
-custom_proxy_group=pornhub`fallback`(美国|US|日本|JP|jp)`http://www.gstatic.com/generate_204`180
+custom_proxy_group=pornhub`fallback`(美国|US)`http://www.gstatic.com/generate_204`180
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300
 custom_proxy_group=🔯 故障转移`fallback`.*`http://www.gstatic.com/generate_204`180
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
