--- a/config
+++ b/config
@@ -11,8 +11,6 @@
 
 surge_ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 surge_ruleset=pornhub,https://raw.githubusercontent.com/stevenwsyi/clashrule/master/pornhub
-surge_ruleset=🛑 全球拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
-surge_ruleset=🛑 全球拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
 surge_ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
 surge_ruleset=🚀 节点选择,rules/ConnersHua/Surge/Ruleset/GlobalMedia.list
 surge_ruleset=🚀 节点选择,rules/ConnersHua/Surge/Ruleset/Telegram.list
@@ -27,8 +25,7 @@ custom_proxy_group=pornhub`fallback`(美国|US)`http://www.gstatic.com/generate_
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300
 custom_proxy_group=🔯 故障转移`fallback`.*`http://www.gstatic.com/generate_204`180
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
-custom_proxy_group=🛑 全球拦截`select`[]REJECT`[]DIRECT
-custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`[]🔯 故障转移`.*
+custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🎯 全球直连`[]🔯 故障转移`.*
 
 enable_rule_generator=true
 overwrite_original_rules=true
